--- a/src/index.css
+++ b/src/index.css
@@ -279,6 +279,7 @@ nav .link-styled {
   from {
     opacity: 1;
   }
+
   to {
     opacity: 0;
   }
@@ -341,13 +342,11 @@ nav .link-styled {
 .sound-section .text {
   display: inline-block;
   color: transparent;
-  background-image: linear-gradient(
-    90deg,
-    #1e3791 0%,
-    #2948b1 40%,
-    #3153c6 55%,
-    #385fda 60%
-  );
+  background-image: linear-gradient(90deg,
+      #1e3791 0%,
+      #2948b1 40%,
+      #3153c6 55%,
+      #385fda 60%);
   -webkit-background-clip: text;
   background-clip: text;
   padding-top: 0.5px;
@@ -399,6 +398,7 @@ nav .link-styled {
 }
 
 @media screen and (max-width: 990px) {
+
   .jumbotron-section .iphone-img,
   nav .link-styled {
     display: none;
